--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -111,8 +111,10 @@ b, strong {
   display: inline-block;
   vertical-align: top;
   margin-top: 5px;
-  min-width: 260px;
+  min-width: 2000px;
   position: relative;
+  min-height: 50px; /* Sesuaikan dengan tinggi teks terbesar */
+  overflow: hidden; /* Penting agar hanya 1 item yg muncul */
 }
 
 .animated-item {
@@ -121,7 +123,7 @@ b, strong {
 
 .animated-item {
   font-size: 38px;
-  line-height: inherit;
+  line-height: inherit;  /* Def = inherit */
   display: block;
   opacity: 0;
   overflow: hidden;
@@ -493,7 +495,7 @@ b, strong {
     padding: 0 2rem;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 1000px) {
   h1 {
     font-size: 2.4em;
   }
@@ -516,7 +518,32 @@ b, strong {
     padding: 3px 20px;
   }
 }
-@media (max-width: 580px) {
+@media (max-width: 580px) {   /* Def=580 */
+  .navbar-brand .uil {
+    font-size: 30px;
+  }
+
+  .navbar-toggler {
+    width: 28px;
+    height: 28px;
+    line-height: 28px;
+  }
+  
+  .navbar-toggler .navbar-toggler-icon {
+    width: 100%;
+    height: 2px;
+    margin: 4px 0;
+  }
+
+  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:first-child {
+    transform: rotate(45deg);
+    top: 4px;
+  }
+  
+  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:last-child {
+    transform: rotate(-45deg);
+    bottom: -1px;
+  }
 	.animated-info {
 		min-width: 200px;
 	}
@@ -542,7 +569,7 @@ b, strong {
     margin: 10px 0 0 0;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 1000px) {
   .animated-text {
     margin-top: 0;
   }
